fix dark mode

--- a/src/styles/form.css
+++ b/src/styles/form.css
@@ -15,11 +15,13 @@
     font-family: 'Roboto', sans-serif;
     font-weight: 500;
     height: 100vh;
+    /* box-shadow: white; */
 }
 
 .formcontainer {
     height: 80vh;
     overflow-y: scroll;
+    box-shadow: none !important;
 }
 
 .headcontainer .container {
